--- a/indext.html
+++ b/indext.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>THIS SITE IS A JOKE DO NOT TAKE OFFENCE TO IT ITS ALSO PRAVITE </title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</style>
+  <meta charset="utf-8">
+  <title>TESTING TEST TESTING </title>
+  <meta name="veiwport" content="width=deivce-width, initial-scale=1.0">
 </head>
-
 <body>
-
-
-  </script>
-
+  <h1>:3</h1>
+  
 </body>
 </html>
