--- a/indext.html
+++ b/indext.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TESTING TEST TESTING </title>
-  <meta name="veiwport" content="width=deivce-width, initial-scale=1.0">
+  <title>TESTING TEST TESTING</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <h1>:3</h1>
-  
 </body>
 </html>
